--- a/FinalProject/MainWindow.xaml
+++ b/FinalProject/MainWindow.xaml
@@ -5,8 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FinalProject"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        Title="StartPage" Height="375" Width="300">
+    <Border Background= "#272537">
+        <Grid>
+            <Label Content="Title" HorizontalAlignment="Center" Margin="0,95,0,0" FontSize="24" Foreground="White"/>
+            <Button x:Name="btnSignIn" Content="Sign In" Height="40" Width="150" Margin="0,60,0,0" FontSize="20"
+                    Click="btnSignIn_Click"
+                    Background="#708090"/>
+            <Button x:Name="btnRegister" Content="Register" Height="40" Width="150" Margin="0,150,0,0" FontSize="20"
+                    Click="btnRegister_Click"/>
+        </Grid>
 
-    </Grid>
+    </Border>
 </Window>
