--- a/FinalProject/MainWindow.xaml
+++ b/FinalProject/MainWindow.xaml
@@ -9,11 +9,14 @@
     <Border Background= "#272537">
         <Grid>
             <Label Content="Title" HorizontalAlignment="Center" Margin="0,95,0,0" FontSize="24" Foreground="White"/>
-            <Button x:Name="btnSignIn" Content="Sign In" Height="40" Width="150" Margin="0,60,0,0" FontSize="20"
+            <Button x:Name="btnSignIn" Content="Sign In"
+                    Height="40" Width="150" Margin="0,60,0,0" FontSize="20"
                     Click="btnSignIn_Click"
                     Background="#708090"/>
-            <Button x:Name="btnRegister" Content="Register" Height="40" Width="150" Margin="0,150,0,0" FontSize="20"
-                    Click="btnRegister_Click"/>
+            <Button x:Name="btnRegister" Content="Register"
+                    Height="40" Width="150" Margin="0,150,0,0" FontSize="20"
+                    Click="btnRegister_Click"
+                    Background="#708090"/>
         </Grid>
 
     </Border>
